--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,7 @@
 					Occupation
 				</label>
 				<div class="col-sm-9">
-					<input type="text" ng-model="user.occupation" class="form-control" required>
+					<input type="text" ng-model="user.occupation" class="form-control">
 				</div>
 			</div>
 			<div class="form-group">
@@ -44,7 +44,7 @@
 					Date of birth
 				</label>
 				<div class="col-sm-9">
-					<input type="date" ng-model="user.birthdate" class="form-control" required placeholder="Date of birth">
+					<input type="date" ng-model="user.birthdate" class="form-control">
 				</div>
 			</div>
 			<input type="submit" value="Submit" ng-disabled="form.$invalid" class="btn btn-primary col-sm-6">
